--- a/style.css
+++ b/style.css
@@ -1,76 +1,3 @@
-
-*{
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-}
-html {
-    scroll-behavior: smooth;
-
-}
-.navbar-brand {
-    font-size: 2rem;
-    padding: 20px;
-}
-.nav-link{
-    font-size: 25px;
-    padding: 10px;
-}
-.carousel {
-    height: 800px;
- background-image: url(img/1618582160_60-funart_pro-p-oboi-fon-rozovii-fon-pastelnii-61.jpg);
-    text-align: center;
-
-}
-
-.carousel-item{
-    padding-top: 14%;
-    font-family: Ubuntu;
-    color: #6d326d;
-}
-.carousel-item h1{
-    padding-bottom: 50px;
-    font-size: 50px;
-}
-.nav-item{
-    color: aliceblue;
-}
-
-#features {
-    padding: 1% ;
-    text-align: center;
-    background-color: rgb(132, 55, 183);
-}
-#features h1{
-    color: rgb(213, 198, 226);
-    font-family: ubuntu;
-    padding: 1%;
-}
-
-.feature-box {
-    padding: 1%;
-}
-
-#features h3 {
-    font-weight: bold;
-    color: rgb(183, 188, 201);
-    font-family: Ubuntu;
-}
-
-#features p {
-    color: rgb(183, 188, 201);
-
-}
-
-.user {
-    margin-bottom: 16px;
-    color: rgb(183, 188, 201);
-}
-
-.user:hover {
-    color: rgb(226, 94, 17);
-}
-
 *{
     font-family: 'Wix Madefor Display', sans-serif; 
 }
@@ -204,7 +131,14 @@ html {
     display: none;
 }
 
-
+td:first-child::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: -1px;
+    border-left: 2px solid #ccc;
+  }
 
 
 
@@ -213,3 +147,53 @@ html {
     -moz-user-select: none;
     user-select: none;
 }
+
+
+
+
+
+
+/* Plans Style */
+.container {
+    padding-top: 30px;
+  }
+  
+  .card-package {
+    padding: 20px;
+    border-radius: 0;
+    border: none;
+    box-shadow: none;
+    transition: all 0.3s ease;
+  }
+  
+  .card-package:hover {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    transform: scale(1.05);
+  }
+  
+  .btn-package {
+    background-color: purple;
+    color: white;
+    border-radius: 20px;
+    transition: background-color 0.3s ease;
+  }
+  
+  .btn-package:hover {
+    background-color: #800080;
+  }
+  
+  .btn-orange {
+    background-color: orange;
+    color: white;
+  }
+  
+  .btn-orange:hover {
+    background-color: #ff8c00;
+  }
+  
+  .form-control:disabled {
+    background-color: #f8f9fa;
+    cursor: not-allowed;
+  }
+  
+  
