--- a/homestyle.css
+++ b/homestyle.css
@@ -130,10 +130,12 @@ body{
             height: 100%;
         }
         .pic{
-            height: 430px;
+            height: 350px;
             border-radius: 30%;
-        
         }
+      
+
+
         .our-team .content{
             background: rgba(0, 0, 0, 0.6);
             position: absolute;
@@ -200,83 +202,11 @@ body{
             padding: 20px;
             font-size: 3rem;
             color: #642f8f;
-        }
-
-          .calculator{
-            position: relative;
-            left: 40%;
-            top: 50px;
-            padding:10px;
-            border:1px solid rgb(116, 75, 0);
-            margin:15px;
-            width:300px;
-            background-color: rgb(116, 75, 0);
-            color: white;
-            border-radius: 15px;
-            box-shadow: 0px 45px 80px rgb(148, 124, 124);
-          }
-          .calculator input {
-            width: 100%;
-            height: 40px;
-            margin-top: 10px;
-            margin-left: 15px;
-            border-radius: 15px;
-            padding-left: 15px;
-            font-size: 16px;
-            border: none;
-            background-color: #eee;
-            color: #333;
-          }
-          
-          .calculator input:focus {
-            outline: none;
-            box-shadow: 0 0 4px #b36ccf;
-          }
-          
-          .calculator input::placeholder{
-           font-size: 15px;
-            color: rgb(85, 79, 79);
-            
-          }
-          .calculator button {
-            cursor: pointer;
-            margin-top: 15px;
-            margin-left: 90px;
-            margin-bottom: 15px;
-            width: 100px;
-            height: 35px;
-            border-radius: 15px;
-            background-color: #906c99; 
-            border: 2px solid rgb(255, 255, 255);
-            transition: background-color 0.3s ease;
-          }
-          
-          .calculator button:hover {
-            background-color: #ff8b13;
-            color: #fff;
-          }
-          
-          .calculator button:focus {
-            outline: none;
-          }
-          
-          
-          .calculator label{
-            margin:10px;
-            font-size: 20px;;
-          }
-          .output{
-            font-size:25px;
-          }
-          h2{
-            text-align:center;
-            margin:15px;
-          }
-        
+        }        
           .calculator {
             position: absolute;
-            top: 90%;
-            left: 50%;
+            top: 170%;
+            left: 32%;
             transform: translate(-50%, -50%);
             align-items: center;
             padding: 10px;
@@ -287,7 +217,21 @@ body{
             color: white;
             border-radius: 15px;
             box-shadow: 0px 45px 80px rgb(148, 124, 124);
-        }
+            animation: pulse 4s infinite;
+          }
+          
+          @keyframes pulse {
+            0% {
+              transform: scale(1);
+            }
+            50% {
+              transform: scale(1.1);
+            }
+            100% {
+              transform: scale(1);
+            }
+          }
+        
         
           .calculator input{
             width:60%;
@@ -309,13 +253,18 @@ body{
             margin-top: 15px;
             margin-left: 90px;
             margin-bottom: 15px;
-            width: 150px; /* Увеличьте ширину кнопки */
-            height: 45px; /* Увеличьте высоту кнопки */
+            width: 190px;
+            height: 45px;
             border-radius: 15px;
             background-color: rgb(255, 255, 255);
             border: 2px solid rgb(255, 255, 255);
-        }
-        
+            transition: background-color 0.3s ease;
+          }
+          
+          .calculator button:hover {
+            background-color: #FF8B13; 
+          }
+          
           .calculator button:focus{
             outline:none;
           }
@@ -332,10 +281,53 @@ body{
           }
           #bmi {
             background-color: #F8F1F1;
-            height: 400px;
+            height: 450px;
             display: flex;
             justify-content: center;
             align-items: flex-end;
           }
-        
+          
+.carousel-inner {
+    height: 800px;
+    background-color: #f3c4f3;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.carousel-inner h1{
+    padding: 300px 0px 50px 0px;
+    font-family: ubuntu;
+}
+
+#features {
+  padding: 2% 15%;
+  text-align: center;
+  background-color: black;
+}
+
+.feature-box {
+  padding: 5%;
+}
+
+#features h3 {
+  font-weight: bold;
+  color: rgb(183, 188, 201);
+  font-family: Ubuntu;
+}
+
+#features p {
+  color: rgb(183, 188, 201);
+
+}
+
+.icon {
+  margin-bottom: 16px;
+  color: rgb(183, 188, 201);
+}
+
+.icon:hover {
+  color: gray;
+}
      
