a couple of changes

--- a/style.css
+++ b/style.css
@@ -187,7 +187,7 @@ td:first-child::after {
 }
 
 .btn-package:hover {
-    background-color: #800080;
+    background-color: #ff8c00;
 }
 
 .btn-orange {
