--- a/homestyle.css
+++ b/homestyle.css
@@ -228,23 +228,28 @@ body {
 #about {
   height: 600px;
   width: auto;
-  background-color: #f7e0f5;
-  font-family: ubuntu;
+  background-color: rgb(255, 242, 242);
+
   text-align: center;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 #about h1 {
-  padding: 50px 0px 20px 0px;
+  padding: 70px 0px 10px 0px;
   font-size: 3rem;
   color: #642f8f;
+  font-family: 'Ubuntu' ;
+}
+#about p{
   font-family: Ubuntu;
+
 }
 
 
 
 .calculator {
   position: absolute;
-  top: 185%;
+  top: 129%;
   left: 32%;
   transform: translate(-50%, -50%);
   align-items: center;
@@ -254,25 +259,23 @@ body {
   width: 700px;
   background-color: #765c80;
   color: white;
+  font-family: Ubuntu;
   border-radius: 15px;
   box-shadow: 0px 45px 80px rgb(148, 124, 124);
-  animation: pulse 4s infinite;
+  animation: pulse1 4s infinite;
 }
 
-@keyframes pulse {
+@keyframes pulse1 {
   0% {
     transform: scale(1);
   }
-
   50% {
     transform: scale(1.1);
   }
-
   100% {
     transform: scale(1);
   }
 }
-
 
 .calculator input {
   width: 60%;
@@ -281,6 +284,8 @@ body {
   margin-left: 15px;
   border-radius: 15px;
   padding-left: 10px;
+  font-family: Ubuntu;
+
 }
 
 .calculator input:focus {
@@ -344,6 +349,7 @@ h2 {
 
 #bmi h1 {
   padding-left: 30px;
+  font-family: Ubuntu;
   font-size: 70px;
   text-align: center;
   color: rgb(188, 158, 192);
@@ -429,6 +435,7 @@ h2 {
 
 
 
+
 #features {
   padding: 2% 15%;
   text-align: center;
@@ -450,13 +457,19 @@ h2 {
 
 }
 
-.icon {
-  margin-bottom: 16px;
-  color: #8f6ebd;
-
+@keyframes pulse {
+  0% {
+    color: #8f6ebd;
+  }
+  50% {
+    color: #FF8B13;
+  }
+  100% {
+    color: #8f6ebd;
+  }
 }
 
-.icon:hover {
-  color: #FF8B13;
-
+.iconn {
+  margin-bottom: 16px;
+  animation: pulse 2.2s infinite;
 }
