--- a/homestyle.css
+++ b/homestyle.css
@@ -229,7 +229,6 @@ body {
   height: 600px;
   width: auto;
   background-color: rgb(255, 242, 242);
-
   text-align: center;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
@@ -249,9 +248,7 @@ body {
 
 
 .calculator {
-  position: absolute;
-  top: 129%;
-  left: 32%;
+  position: relative;
   transform: translate(-50%, -50%);
   align-items: center;
   padding: 10px;
@@ -344,7 +341,7 @@ h2 {
 
 #bmi {
   background-color: rgb(255, 242, 242);
-  height: 420px;
+  height: 400px;
   display: flex;
   justify-content: center;
   align-items: flex-end;
